foo-corp/cluster/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:            
  name: istio-galley
webhooks:  
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1akNDQWM2Z0F3SUJBZ0lSQUtBMU9mcXlEMEc2L1FYejNUaFVKUm93RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQ2hNUmF6aHpMbU5zZFhOMFpYSXViRzlqWVd3d0hoY05NVGt3TWpBME1qRXhNalF5V2hjTgpNakF3TWpBME1qRXhNalF5V2pBY01Sb3dHQVlEVlFRS0V4RnJPSE11WTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFPdldIKy9oRUVCVWpUVE11NDRLcExjWE5lUU0KMmFjOFAvMEJZMzR5UjU3TmNxNHJWcGVHVW5NZ290ZUJlMXAzN2ZCaWF6SzNUS1FOd1BWaExMN1E4VHdlVjVmZApaTGVGVTNUenRkVG [...]
    service:       
      name: istio-galley
      namespace: istio-system
      path: /admitpilot
  failurePolicy: Ignore
  name: pilot.validation.istio.io
  rules:                   
  - apiGroups:  
    - config.istio.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - httpapispecs
    - httpapispecbindings
    - quotaspecs
    - quotaspecbindings
